@@ -48,7 +48,7 @@ IndexerError: Unknown sort type 'unknown' for field 'price2'
 
 
 
-Add a set of documents, which dates and prices, to test sorting.:
+Add a set of documents, which dates and prices, to test sorting:
 
 >>> for i in xrange(200):
 ...     doc = UnprocessedDocument()
@@ -60,7 +60,25 @@ Add a set of documents, which dates and prices, to test sorting.:
 ...     doc.fields.append(Field('date', '2007%02d%02d' % (i % 12 + 1, i / 12 + 1)))
 ...     doc.fields.append(Field('price', '%f' % ((float(i) / 7) % 10)))
 ...     id = iconn.add(doc)
+
+
+Add some synonyms:
+
+>>> iconn.add_synonym('document', 'record')
+>>> iconn.add_synonym('basic test', 'exam', field='text')
+>>> iconn.add_synonym('document', 'notrecord')
+>>> iconn.add_synonym('documents', 'notrecord')
+>>> iconn.remove_synonym('document', 'notrecord')
+>>> iconn.clear_synonyms('documents')
+
 >>> iconn.flush()
+
+>>> dict(iconn.iter_synonyms())
+{('document', None): ('record',), ('basic test', 'text'): ('exam',)}
+>>> dict(iconn.iter_synonyms('doc'))
+{('document', None): ('record',)}
+>>> dict(iconn.iter_synonyms('toc'))
+{}
 
 
 Now, open a search connection:
@@ -70,7 +88,7 @@ First, check the fallback handling for queries with invalid boolean
 operations:
 >>> q = sconn.query_parse('AND document')
 >>> str(q)
-'Xapian::Query((and:(pos=1) AND Zdocument:(pos=2)))'
+'Xapian::Query((and:(pos=1) AND (Zdocument:(pos=2) OR record:(pos=2))))'
 
 Check that spelling correction works:
 >>> sconn.spell_correct('docment')
@@ -88,8 +106,26 @@ Check that stopwording worked:
 >>> [result.id for result in results]
 []
 
+Check that synonyms work:
+>>> dict(sconn.iter_synonyms())
+{('document', None): ('record',), ('basic test', 'text'): ('exam',)}
+>>> q = sconn.query_parse('document')
+>>> str(q)
+'Xapian::Query((Zdocument:(pos=1) OR record:(pos=1)))'
+
+
+Remove the synonyms for the remaining tests:
+>>> iconn.clear_synonyms('document')
+>>> iconn.clear_synonyms('basic test', field='text')
+>>> iconn.flush()
+>>> sconn.reopen()
+>>> dict(sconn.iter_synonyms())
+{}
+
 Now, parse a simple query.
 >>> q = sconn.query_parse('document')
+>>> str(q)
+'Xapian::Query(Zdocument:(pos=1))'
 >>> results = sconn.search(q, 0, 30)
 >>> [result.id for result in results]
 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '1a', '1b', '1c', '1d']
