@@ -1,3 +1,7 @@
+Mon Jul 23 10:40:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/: Add missing synonym stuff.
+
 Tue Jul 17 13:42:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst,secore/fieldactions.py,
